add mail receiver

--- a/src/main/resources/static/chat.html
+++ b/src/main/resources/static/chat.html
@@ -25,7 +25,7 @@
             ta.value = ta.value + "连接被关闭";
         };
     } else {
-        alert("你的浏览器不支持 WebSocket！");
+        alert("您的浏览器不支持网页聊天，请使用谷歌浏览器");
     }
 
     function send(message) {
